--- a/.github/workflows/contanarizedBuildACR.yml
+++ b/.github/workflows/contanarizedBuildACR.yml
@@ -13,8 +13,8 @@ jobs:
     - name: Azure CLI login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        client-id: ${{ vars.AZURE_CLIENT_ID }}
+        tenant-id: ${{ vars.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Azure ACR login
