--- a/.github/workflows/contanarizedBuildACR.yml
+++ b/.github/workflows/contanarizedBuildACR.yml
@@ -2,6 +2,10 @@ name: ContanarizedBuildACR
 
 on: workflow_dispatch
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   Docker_Build:
     runs-on: ubuntu-latest
