--- a/.github/workflows/ContanarizedDockerBuild.yml
+++ b/.github/workflows/ContanarizedDockerBuild.yml
@@ -16,10 +16,10 @@ jobs:
        uses: docker/login-action@v3
        with:
         username: ${{vars.USERNAME}}
-        password: ${{secrets.DOCKERPASS}}
+        password: ${{secrets.PASSWORD}}
          
      - name: Docker Build
-       run: docker build -t ${{ vars.USERNAME }}/git-action-images:dotnetimage .
+       run: docker build -t ${{ vars.USERNAME }}/git-action-images:dotnetc1image .
 
      - name: Docker Push
-       run: docker push ${{ vars.USERNAME }}/git-action-images:dotnetimage
+       run: docker push ${{ vars.USERNAME }}/git-action-images:dotnetc1image
